# router/router.go
@@ -33,5 +33,6 @@ func register(router *gin.Engine) {
 	router.POST("/api/login", controller.Login)
 	router.POST("/api/post/add", controller.CreateSysPost)
 	router.GET("/api/post/list", controller.GetSysPostList)
+	router.GET("/api/post/info", controller.GetSysPostById)
 
 }
